syntax = "proto3";

package jit;

option go_package = "jit-grpc-starter/proto;jit";


service AccessService {
  rpc RequestAccess (AccessRequest) returns (AccessResponse);
}

message AccessRequest {
  string user_id = 1;
  string role = 2;
  int32 duration_minutes = 3;
  string justification = 4;
}

message AccessResponse {
  string request_id = 1;
  string status = 2;
}
